prepare to introduce Players class and wrap List<Player> there